// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchDevices With Active Directory: hostAgents 1`] = `
Array [
  Object {
    "_class": Array [
      "HostAgent",
    ],
    "_key": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_rawData": Array [],
    "_type": "intune_host_agent",
    "complianceState": "noncompliant",
    "compliant": false,
    "createdOn": undefined,
    "displayName": "Intune Host Agent",
    "function": Array [
      "endpoint-compliance",
      "endpoint-protection",
    ],
    "managementAgent": "mdm",
    "name": "intune-host-agent",
    "registrationState": "registered",
    "state": "managed",
  },
  Object {
    "_class": Array [
      "HostAgent",
    ],
    "_key": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4",
    "_rawData": Array [],
    "_type": "intune_host_agent",
    "complianceState": "unknown",
    "compliant": undefined,
    "createdOn": undefined,
    "displayName": "Intune Host Agent",
    "function": Array [
      "endpoint-compliance",
      "endpoint-protection",
    ],
    "managementAgent": "mdm",
    "name": "intune-host-agent",
    "registrationState": "registered",
    "state": "retireIssued",
  },
]
`;

exports[`fetchDevices With Active Directory: managedDeviceRelationshipsWithAD 1`] = `
Array [
  Object {
    "_class": "HAS",
    "_fromEntityKey": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
    "_key": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9|has|683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_toEntityKey": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_type": "azure_user_has_smartphone",
    "displayName": "HAS",
  },
  Object {
    "_class": "MANAGES",
    "_fromEntityKey": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_key": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc|manages|683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_toEntityKey": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_type": "intune_host_agent_manages_smartphone",
    "displayName": "MANAGES",
  },
  Object {
    "_class": "MANAGES",
    "_fromEntityKey": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4",
    "_key": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4|manages|1f75329e-51fc-451c-bd40-c457337641a4",
    "_toEntityKey": "1f75329e-51fc-451c-bd40-c457337641a4",
    "_type": "intune_host_agent_manages_laptop",
    "displayName": "MANAGES",
  },
]
`;

exports[`fetchDevices With Active Directory: managedDevices 1`] = `
Array [
  Object {
    "BYOD": true,
    "_class": Array [
      "Host",
      "Device",
    ],
    "_key": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_rawData": Array [],
    "_type": "smartphone",
    "assetTag": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "category": "endpoint",
    "createdOn": undefined,
    "deviceName": "[REDACTED]",
    "deviceType": "iPhone",
    "displayName": "[REDACTED]",
    "easDeviceId": false,
    "encrypted": true,
    "hardwareManufacturer": "Apple",
    "hardwareModel": "iPhone 11 Pro",
    "hardwareSerial": "C39ZQB9SN6XQ",
    "hardwareVendor": "Apple",
    "hardwareVersion": "iPhone 11 Pro",
    "iccid": null,
    "id": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "imei": "[REDACTED]",
    "jailBroken": false,
    "make": "Apple",
    "managed": true,
    "meid": "[REDACTED]",
    "model": "iPhone 11 Pro",
    "name": "[REDACTED]",
    "osDetails": "iOS version 14.4",
    "osName": "iOS",
    "osVersion": "14.4",
    "ownerType": "personal",
    "phoneNumber": "[REDACTED]",
    "physical": true,
    "serial": "[REDACTED]",
    "serialNumber": "[REDACTED]",
    "supervised": false,
    "udid": null,
    "userDisplayName": "Michael Knoedel",
    "userEmails": Array [
      "redacted@email.com",
    ],
    "userId": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
    "username": "[REDACTED]",
    "version": "iPhone 11 Pro",
    "wifiMacAddress": "[REDACTED]",
  },
  Object {
    "BYOD": false,
    "_class": Array [
      "Host",
      "Device",
    ],
    "_key": "1f75329e-51fc-451c-bd40-c457337641a4",
    "_rawData": Array [],
    "_type": "laptop",
    "assetTag": "00000000-0000-0000-0000-000000000000",
    "category": "endpoint",
    "createdOn": undefined,
    "deviceName": "[REDACTED]",
    "deviceType": "macMDM",
    "displayName": "[REDACTED]",
    "easDeviceId": false,
    "encrypted": true,
    "hardwareManufacturer": "Apple",
    "hardwareModel": "MacBook Pro",
    "hardwareSerial": "C02DG307MD6Q",
    "hardwareVendor": "Apple",
    "hardwareVersion": "MacBook Pro",
    "iccid": null,
    "id": "1f75329e-51fc-451c-bd40-c457337641a4",
    "imei": "",
    "jailBroken": true,
    "make": "Apple",
    "managed": true,
    "meid": "",
    "model": "MacBook Pro",
    "name": "[REDACTED]",
    "osDetails": "macOS version 11.2.1 (20D74)",
    "osName": "macOS",
    "osVersion": "11.2.1 (20D74)",
    "ownerType": "company",
    "phoneNumber": "",
    "physical": true,
    "serial": "[REDACTED]",
    "serialNumber": "[REDACTED]",
    "supervised": true,
    "udid": null,
    "userDisplayName": "",
    "userEmails": undefined,
    "userId": "",
    "username": "",
    "version": "MacBook Pro",
    "wifiMacAddress": "[REDACTED]",
  },
]
`;

exports[`fetchDevices Without Active Directory: hostAgents 1`] = `
Array [
  Object {
    "_class": Array [
      "HostAgent",
    ],
    "_key": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_rawData": Array [],
    "_type": "intune_host_agent",
    "complianceState": "noncompliant",
    "compliant": false,
    "createdOn": undefined,
    "displayName": "Intune Host Agent",
    "function": Array [
      "endpoint-compliance",
      "endpoint-protection",
    ],
    "managementAgent": "mdm",
    "name": "intune-host-agent",
    "registrationState": "registered",
    "state": "managed",
  },
  Object {
    "_class": Array [
      "HostAgent",
    ],
    "_key": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4",
    "_rawData": Array [],
    "_type": "intune_host_agent",
    "complianceState": "unknown",
    "compliant": undefined,
    "createdOn": undefined,
    "displayName": "Intune Host Agent",
    "function": Array [
      "endpoint-compliance",
      "endpoint-protection",
    ],
    "managementAgent": "mdm",
    "name": "intune-host-agent",
    "registrationState": "registered",
    "state": "retireIssued",
  },
]
`;

exports[`fetchDevices Without Active Directory: managedDeviceRelationshipsNoAD 1`] = `
Array [
  Object {
    "_class": "HAS",
    "_key": "683dbff1-c8ff-4996-91ae-85484de46cfc|has|001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
    "_mapping": Object {
      "relationshipDirection": "REVERSE",
      "sourceEntityKey": "683dbff1-c8ff-4996-91ae-85484de46cfc",
      "targetEntity": Object {
        "_class": Array [
          "User",
        ],
        "_key": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
        "_type": "azure_user",
        "email": "redacted@email.com",
        "id": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
      },
      "targetFilterKeys": Array [
        Array [
          "_class",
          "id",
        ],
        Array [
          "_class",
          "email",
        ],
      ],
    },
    "_type": "azure_user_has_smartphone",
    "displayName": "HAS",
  },
  Object {
    "_class": "MANAGES",
    "_fromEntityKey": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_key": "intune-host-agent:683dbff1-c8ff-4996-91ae-85484de46cfc|manages|683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_toEntityKey": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_type": "intune_host_agent_manages_smartphone",
    "displayName": "MANAGES",
  },
  Object {
    "_class": "MANAGES",
    "_fromEntityKey": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4",
    "_key": "intune-host-agent:1f75329e-51fc-451c-bd40-c457337641a4|manages|1f75329e-51fc-451c-bd40-c457337641a4",
    "_toEntityKey": "1f75329e-51fc-451c-bd40-c457337641a4",
    "_type": "intune_host_agent_manages_laptop",
    "displayName": "MANAGES",
  },
]
`;

exports[`fetchDevices Without Active Directory: managedDevices 1`] = `
Array [
  Object {
    "BYOD": true,
    "_class": Array [
      "Host",
      "Device",
    ],
    "_key": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "_rawData": Array [],
    "_type": "smartphone",
    "assetTag": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "category": "endpoint",
    "createdOn": undefined,
    "deviceName": "[REDACTED]",
    "deviceType": "iPhone",
    "displayName": "[REDACTED]",
    "easDeviceId": false,
    "encrypted": true,
    "hardwareManufacturer": "Apple",
    "hardwareModel": "iPhone 11 Pro",
    "hardwareSerial": "C39ZQB9SN6XQ",
    "hardwareVendor": "Apple",
    "hardwareVersion": "iPhone 11 Pro",
    "iccid": null,
    "id": "683dbff1-c8ff-4996-91ae-85484de46cfc",
    "imei": "[REDACTED]",
    "jailBroken": false,
    "make": "Apple",
    "managed": true,
    "meid": "[REDACTED]",
    "model": "iPhone 11 Pro",
    "name": "[REDACTED]",
    "osDetails": "iOS version 14.4",
    "osName": "iOS",
    "osVersion": "14.4",
    "ownerType": "personal",
    "phoneNumber": "[REDACTED]",
    "physical": true,
    "serial": "[REDACTED]",
    "serialNumber": "[REDACTED]",
    "supervised": false,
    "udid": null,
    "userDisplayName": "Michael Knoedel",
    "userEmails": Array [
      "redacted@email.com",
    ],
    "userId": "001d35fc-dd2b-4d17-9ffc-3bafa265e7d9",
    "username": "[REDACTED]",
    "version": "iPhone 11 Pro",
    "wifiMacAddress": "[REDACTED]",
  },
  Object {
    "BYOD": false,
    "_class": Array [
      "Host",
      "Device",
    ],
    "_key": "1f75329e-51fc-451c-bd40-c457337641a4",
    "_rawData": Array [],
    "_type": "laptop",
    "assetTag": "00000000-0000-0000-0000-000000000000",
    "category": "endpoint",
    "createdOn": undefined,
    "deviceName": "[REDACTED]",
    "deviceType": "macMDM",
    "displayName": "[REDACTED]",
    "easDeviceId": false,
    "encrypted": true,
    "hardwareManufacturer": "Apple",
    "hardwareModel": "MacBook Pro",
    "hardwareSerial": "C02DG307MD6Q",
    "hardwareVendor": "Apple",
    "hardwareVersion": "MacBook Pro",
    "iccid": null,
    "id": "1f75329e-51fc-451c-bd40-c457337641a4",
    "imei": "",
    "jailBroken": true,
    "make": "Apple",
    "managed": true,
    "meid": "",
    "model": "MacBook Pro",
    "name": "[REDACTED]",
    "osDetails": "macOS version 11.2.1 (20D74)",
    "osName": "macOS",
    "osVersion": "11.2.1 (20D74)",
    "ownerType": "company",
    "phoneNumber": "",
    "physical": true,
    "serial": "[REDACTED]",
    "serialNumber": "[REDACTED]",
    "supervised": true,
    "udid": null,
    "userDisplayName": "",
    "userEmails": undefined,
    "userId": "",
    "username": "",
    "version": "MacBook Pro",
    "wifiMacAddress": "[REDACTED]",
  },
]
`;
